HEAD
	+ Enable backup event watcher by default
	+ Improve help message for configuration
	+ Added eBox Storage from Denver (US)
	+ Added '/tmp' to default excludes
	+ Fixed element text in excludes/includes
	+ Includes/Excludes fixed
	+ Antichronological order used in versions
	+ Cache lists regenerated on module restart
1.4
	+ Bug fix: do not duplicate includes with exclude-regexp
	+ Add eBox Backup Storage strings
1.3.15
	+ Add custom module status section
1.3.14
	+ Bug fix: off-by-one error on remote file search
	+ Bug fix: add lock to avoid overlapping between
	  backup processes (Closes #1680)
	+ Added validation of parameters in RemoteSettings and notice
	about SHH known hosts
	+ Cannot choose a higher frequency of full backups  than
	incremental backups
	+ Added validation of includes and excludes
	+ Regex exclude bugfix
	+ Add eBox remote storage servers
	+ Add file to distribute remote server fingerprints
	+ Add support for symmetric encryption
	+ Disable cache of backup status as is useless
	+ Allow to write destination URLs without relative directory
1.3.13
	+ Bug fix: add --force to delete old backup sets
	+ Bug fix: fix restoring of the first file
1.3.12
	+ Add page title
1.3.10
	+ Bugfix do not include '/' as it is already used as source directory
	+ Get rid of former local backup code
	+ Send events when backup is done
1.3.7
	+ Include configuration backup in backup
1.3.3
	+ an active event's  watcher is not longer needed for
	the cron job
	+ cron job is written on config regeneration