@@ -7,6 +7,9 @@ HEAD
 	+ Includes/Excludes fixed
 	+ Antichronological order used in versions
 	+ Cache lists regenerated on module restart
+	+ Added automatic exclude of backup directory for file system
+	method
+	+ Better treatment of errors while restoring files form the UI
 1.4
 	+ Bug fix: do not duplicate includes with exclude-regexp
 	+ Add eBox Backup Storage strings
